--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.9.0",
+    "drizzle-kit": "^0.28.1",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
+    "drizzle-orm": "^0.36.2",
+    "postgres": "^3.4.5",
     "zod": "^3.23.8"
   }
 }
