--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv-expand": "^11.0.6",
     "drizzle-orm": "^0.36.2",
     "postgres": "^3.4.5",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   }
 }
